--- a/Scribe/Base.lproj/LaunchScreen.storyboard
+++ b/Scribe/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,20 +18,16 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="4Af-v3-CzU">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Scribe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHk-DI-d8Q">
-                                <rect key="frame" x="146" y="430" width="122" height="37"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Scribe_logo_no_background" translatesAutoresizingMaskIntoConstraints="NO" id="EJw-7A-Chg">
+                                <rect key="frame" x="27" y="352" width="360" height="192"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="uHk-DI-d8Q" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NQY-Ny-bPs"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="P4m-M1-zZv"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="PTr-jc-5Rg"/>
-                            <constraint firstItem="uHk-DI-d8Q" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ht8-q9-JOW"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nuB-tD-9Pe"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="szy-e3-Pyj"/>
                         </constraints>
@@ -44,6 +39,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Scribe_logo_no_background" width="739" height="533"/>
         <image name="bg" width="1024" height="1024"/>
     </resources>
 </document>
