--- a/Scribe/Base.lproj/LaunchScreen.storyboard
+++ b/Scribe/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="4Af-v3-CzU">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4Af-v3-CzU" userLabel="background">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Scribe_logo_no_background" translatesAutoresizingMaskIntoConstraints="NO" id="EJw-7A-Chg">
@@ -40,6 +40,6 @@
     </scenes>
     <resources>
         <image name="Scribe_logo_no_background" width="739" height="533"/>
-        <image name="bg" width="1024" height="1024"/>
+        <image name="background" width="1024" height="1024"/>
     </resources>
 </document>
